--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -1,2 +1,21 @@
-﻿body {
+﻿img#logo {
+    min-width: 50%;
+    min-height: 50%;
+    background-color: #FFF;
+    border: 2px solid #000;
+    padding: 5px;
+    margin-bottom: 5px;
+}
+
+div#nav {
+    background-color: #F7941E;
+    border-radius: 25px;
+}
+
+dl.sub-nav dd a {
+    color: black;
+}
+
+body {
+    background-color: #FAC358;
 }
