--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -5,6 +5,14 @@
     margin-bottom: 5px;
 }
 
+#project {
+    margin-bottom: 25px;
+}
+
+#round {
+    border-radius; 25px;
+}
+
 div#nav {
     background-color: #F7941E;
     border-radius: 25px;
@@ -24,14 +32,10 @@ a.button {
     border:2px solid #F7941E;
 }
 
-a.button:hover{
-    background-color: #FAC358;
-}
-
  #connect {
      text-align: center;
  }
 
-body {
+body, a.button:hover {
     background-color: #FAC358;
 }
