--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -1,41 +1,57 @@
-﻿img#logo {
+﻿/*
+    main.css
+    Kevin Donkers
+    portfolio website
+    This is the main css file for Kevin Donkers portfolio website 
+*/
+
+/*logo background and border*/
+img#logo {
     background-color: #FFF;
     border: 2px solid #000;
     padding: 5px;
     margin-bottom: 5px;
 }
 
+/*Spacing below projects*/
 #project {
     margin-bottom: 25px;
 }
 
+/*round links*/
 #round {
     border-radius; 25px;
 }
 
+/*style the nav bar*/
 div#nav {
     background-color: #F7941E;
     border-radius: 25px;
 }
 
+/*nav bar letters are black*/
 dl.sub-nav dd a {
     color: black;
 }
 
+/*nav link colour and rounded*/
 #nav dl dd.active a {
     background-color: #FAC358;
     border-radius: 25px;
 }
 
+/*change button colour and add a border so it doesnt blend into the background when hovered over*/
 a.button {
     background-color: #F7941E;
     border:2px solid #F7941E;
 }
 
+/*center alignment for looks*/
  #connect {
      text-align: center;
  }
 
+ /*change hover and body background colour*/
 body, a.button:hover {
     background-color: #FAC358;
 }
